Fix chevron resizing issue on mobile view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,16 +41,15 @@ main {
 
 .accordion-title {
   background-color: white;
-  cursor: pointer;
   display: flex;
   text-align: left;
 }
 
 .accordion-icon {
-  margin-left: auto;
   transition: transform 0.1s ease;
-
-  display: flex;
+  margin-left: auto;
+  height: 20px;
+  width: 10px;
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
@@ -70,7 +69,6 @@ main {
   display: block;
   padding: 0;
   margin: 0;
-
 }
 
 .satellite-img {
@@ -78,5 +76,4 @@ main {
   width: 100%;
   padding: 0;
   margin: 0;
-
 }
